Add support for SIMD operations (closes #4)